ICKY-806 fixed next link, image and test issues

--- a/styles/global.css
+++ b/styles/global.css
@@ -30,3 +30,7 @@
   -ms-transform: rotate(3deg) translate(0px, -4px);
   transform: rotate(3deg) translate(0px, -4px);
 }
+
+a {
+  text-decoration: none;
+}
